2013-08-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/modificar_agente.php,
	godmode/agentes/module_manager_editor.php: changed the code to
	avoid to call enterprise functions.
	
	Fixes: #2367
	
	*include/functions_agents.php: fixed source code style..

2013-08-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/estado_agente.php: fixed the call to
	enterprise function.
	
	Fixes: #2367 
	
	* godmode/agentes/module_manager.php: make more easy the merges
	from the last branch.

2013-08-07 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/setup/setup_auth.php, godmode/admin_access_logs.php,
	godmode/agentes/module_manager.php: removed the code as
	"call time passing variables by reference" deprecated in PHP 5.4.
	
	* index.php: improved the source code style.

2013-08-06 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/menu.php, godmode/massive/massive_edit_modules.php:
	improved the source code style.
	
	* godmode/snmpconsole/snmp_alert.php,
	godmode/massive/massive_operations.php: added snmp alert operations.

2013-08-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/constants.php, godmode/snmpconsole/snmp_alert.php: added
	filter in the alert snmp page and pagination.
	
	* operation/events/events.build_table.php,
	godmode/netflow/nf_edit.php, include/functions_ui.php,
	include/db/mysql.php, include/functions_incidents.php: improved the
	source code style.

2013-08-02  Sergio Martin <sergio.martin@artica.es>

	* include/functions_filemanager.php: added new error message
	on file manager to warn when the post size limit is
	exceded by the uploaded file

2013-08-02 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/graphs/functions_gd.php, include/graphs/fgraph.php,
	include/functions.php, include/functions_graph.php,
	include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php,
	operation/visual_console/render_view.php: a lot of fixes in the
	visualmap.
